--- a/src/Components/shared/ListPage/ListPage.scss
+++ b/src/Components/shared/ListPage/ListPage.scss
@@ -14,7 +14,7 @@
     }
 
     &__header {
-        padding: 1.5rem;        
+        padding: 0 1.5rem 1.5rem 1.5rem;        
         box-sizing: border-box;
         align-items: center;
 
